@@ -1,3 +1,9 @@
+2014-11-04 Riccardo Mottola <rm@gnu.org>
+
+	* Sources/DOMCSS.m
+	* Sources/WebHTMLDocumentView.m
+	Descend returns negative values, fix accordingly.
+
 2013-10-25..28  Nikolaus Schaller <hns@computer.org>
 
 	* fixed issues with CSS inherit and initial
